[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Diana Huang <hxydiana@utexas.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
stable-baselines3 = {extras = ["extra"], version = "^2.2.1"}
ghalton = "0.6.1"
pybullet-planning = "^0.6.0"
gymnasium = "^0.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
